resources/css/sass/pages/_player.scss
@use '../abstracts/' as *;


.static-wrapper.player{
    border: 0;

    .player-matches{
        .matches-wrapper{
            margin-bottom: 120px;
        }
        .matches-header{
            margin-top: -35px;
        }
    }



      >h1{
        position: relative;
        &.fix-letters{
            font-family: Arial !important;
            text-transform: capitalize !important;
            font-weight: bold !important;
            font-size: 45px !important;
        }
        .edit-btn{
            position: absolute;
            text-transform: uppercase;
            right: 290px;
            color: black;
            font-size: 50px;
            padding: 5px 10px;
            top: -19px;
            font-weight: normal;

            svg{
                width: 50px;
                height: 50px;
            }

            &:hover {
                svg{
                    fill: $red;
                }
            }

          }
      }
      .subtitle-spacer{
        margin-bottom: 15px;
      }

    >.rank{
        width: 100px;
        height: 100px;
        position: relative;
        border-radius: 100px;
        border: 2px solid $rank-border-color;
        padding: 0;
        margin: 0 auto;
        margin-bottom: 50px;
        margin-top: -20px;

        &.first{
          border-width: 6px;
          border-color: $gold;
        }

        &.second{
          border-width: 6px;
          border-color: $silver;
        }

        &.third{
          border-width: 6px;
          border-color: $bronze;
        }


        p{
            display: block;
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
            line-height: 1;
            margin: 0;
            padding: 0;
            font-size: 50px;

            &.align-left{
                transform: translate(-52%, -47%);
            }
        }
      }
      .summary-title{
          text-align: center;
          width: 100%;
          display: block;
          font-size: 20px;
          font-family: 'Helvetica Neue';
          text-transform: uppercase;
          color: $blue;
          margin-bottom: 32px;
          padding-bottom: 20px;
          border-bottom: 2px solid $lignt-gray;
          padding-bottom: 20px;
          margin-bottom: 30px;
          border-bottom: 2px solid #e2e0e1;
          margin-top: 70px;

          &.big-margin{
            margin-top: 110px;
          }

          &.no-border{
              border: none;
          }

          &.low-margin{
              margin-top: 70px;
          }
      }
      .chart-wrapper{
        margin-top: 20px;
      }

      .summary.player{
          &.five{
              display: grid;
              grid-template-columns: repeat(5, 20%);

              .summary-item{
                  display: grid;
                  place-items: center;
              }
          }
          &.three{
            display: grid;
            grid-template-columns: repeat(3, 33.3%);

            .summary-item{
                display: flex;
                flex-direction: column;
                align-items: center;
                &.players{
                    h2{
                        margin-bottom: 10px;
                    }
                    p{
                        margin-bottom: 0;
                        font-size: 20px;
                        font-weight: normal;
                        &.show-more{
                            font-family: 'Helvetica Neue';
                            font-size: 14px;
                            text-transform: uppercase;
                            color: $blue;
                            margin-top: 12px;
                            cursor: pointer;

                            &:hover{
                                color: $red;
                            }
                        }
                        a{
                            color: black;
                            &:hover{
                                color: $red;
                            }
                        }
                    }
                }
            }
        }
          &.mobile{
              display: none;
          }
          .summary-item{
              border: 0;
              h2{
                  color: $dark-gray;
                  font-size: 17px;
                  font-weight: normal;
                &.mb-10{
                    margin-bottom: 10px;
                }
              }
              p{
                  font-size: 40px;
                  font-weight: bold;
                  &.smaller-list{
                    font-weight: normal;
                  }
                  &.smaller{
                      font-size: 30px;
                     &.f20{
                        margin-bottom: 0px !important;
                        font-weight: normal !important;
                        font-size: 20px !important;
                    }

                      a{
                        color: black;

                        &:hover{
                            color: $red;
                        }
                      }
                  }
              }
          }
      }
}

@media only screen and (max-width: 1200px) {
    .static-wrapper.player{
        padding-inline: 0;
        h1{
            display: block;
            margin-bottom: 0;
            text-align: center;
            width: 100%;
            &.hide-mobile{
                display: none;
            }

        .edit-btn{
            right: 10px;
            top: -64px;
          }
        }

          .low-margin{
              margin-bottom: 0px;
          }
        .summary-item{

            p{
                font-size: 33px !important;
            }
        }
        p.subtitle{
            margin-top: 0;
        }

        .summary-title{
            font-size: 17px;
            border-bottom: 2px solid $lignt-gray !important;

        }
        .player-matches{
            width: 100%;
        }

        .summary.player.three{
            &.col{
              grid-template-columns: 100%;
              gap: 30px;
             .summary-item{
                &.players{
                    display: flex;
                    padding-inline: 20px;
                    h2{
                      width: max-content;
                      margin: 0 auto;
                      margin-bottom: 10px;
                    }
                    p{
                        font-size: 20px !important;
                        &.show-more{
                            font-size: 14px !important;
                        }

                    }
                }
             }
            }
        }
        .summary.player.five{
            &.desktop{
                display: none !important;
            }

            &.mobile{
                flex-wrap: wrap;
                display: flex;
                .summary-item{
                    width: 33.3%;

                    &.half{
                        width: 50%;
                    }
                    p{
                        font-size: 35px;
                    }
                }
            }

        }
    }
}

